--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -37,7 +37,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                   <li class="nav-item d-flex align-items-center p-2">
-                    <a class="nav-link active" aria-current="page" href="hakkımızda.html">Hakkımızda</a>
+                    <a class="nav-link active" aria-current="page" href="hakkimizda.html">Hakkımızda</a>
                     <span class="ayrac">|</span>
                   </li>
                   <li class="nav-item d-flex align-items-center p-2">
